--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         html,
         body {
           width: 100%;
-          height: 100%;
+          height: 100vh;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -154,6 +154,6 @@
         <div></div>
       </div>
     </div>
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- <script type="module" src="/src/main.tsx"></script> -->
   </body>
 </html>
