--- a/index.html
+++ b/index.html
@@ -154,6 +154,6 @@
         <div></div>
       </div>
     </div>
-    <!-- <script type="module" src="/src/main.tsx"></script> -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
