--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
           align-items: center;
         }
 
+        .loading-container {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+
         .loading {
           display: block;
           font-size: 0;
@@ -149,11 +157,13 @@
           }
         }
       </style>
-      <div id="html_loding" class="loading">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+      <div class="loading-container">
+        <div id="html_loding" class="loading">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
     </div>
     <script>
